adding details to about me  page

--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,14 @@
            
                 <img src="6427734_preview.png" width="150px" >
 
-                <button class="buttons" onclick="AboutMe.html">About Me </button> 
-                <br> <br> 
-                <button class="buttons"> projects</button>
-                <br> <br> 
-                <button class="buttons" onclick="Index.html" > Home</button> 
-                <br> <br> 
-                <button class = "buttons" onclick="contact.html"> Contact Me</button>
-                <br> <br>    
+                <button class="buttons" onclick="document.location='AboutMe.html'"  >About Me </button> 
+                    <br> <br> 
+                    <button class="buttons" onclick="document.location='Projects.html'"> projects</button>
+                    <br> <br> 
+                    <button class="buttons" onclick="document.location='Index.html'" > Home</button> 
+                    <br> <br> 
+                    <button class = "buttons" onclick="document.location='contact.html'"> Contact Me</button>
+                    <br> <br>       
         </div>
         <div class="section2 col-md-10 card bg-dark text-white">
           <img class="card-img" src="Untitled.png" alt="Card image">
